# Airbnb-Project

./: .gitignore  .gitmodules  README.md
agent-backend-python/: README.md  agent.py  main.py  pyproject.toml
backend/: llm.js  package-lock.json  package.json  server.js
extension/: README.md  background.js  background.test.js  manifest.json  package-lock.json  package.json
extension/content/: content_script.js
popup/: popup.html
